--- a/CSS/container.css
+++ b/CSS/container.css
@@ -1,17 +1,18 @@
 #container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     border: 1px solid grey;
     border-radius: 5px;
     width: 60%;
     height: 70vh;
     color: white;
     background-size: 100% 100%;
-    /* background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp"); */
+    background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp");
     background-color: black;
     margin-top: 60px;
     margin-left: auto;
+    padding: auto;
     margin-right: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
