--- a/CSS/extras.css
+++ b/CSS/extras.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+
 body {
     font-family: "Roboto Slab", serif;
 }
@@ -20,9 +21,9 @@ h3 {
 }
 
 #ff {
-    /* border: 1px solid black; */
     font-style: oblique;
 }
+
 li h3 {
     font-family: "Roboto Slab", serif;
 }
@@ -30,14 +31,15 @@ li h3 {
 .hide {
     display: none;
 }
+
 #warning {
     background-color: black;
 }
 
-
 label {
     background-color: black;
 }
+
 select {
     margin-bottom: 10px;
     padding: 0 20px 0 20px;
@@ -47,13 +49,25 @@ option {
     border: 1px solid gray;
 }
 
-#showHB{
-    margin-left:8px;
-    }
-
- .hideLoadingGif {
-        display: none;
+#showHB {
+    margin-left: 8px;
 }
-.hideContainer{
-        visibility: hidden;
-        }
+
+.hideLoadingGif {
+    display: none;
+}
+
+.hideContainer {
+    visibility: hidden;
+}
+
+.invalidInputWarning {
+    color: red;
+    border: 1px solid red;
+}
+
+.invalidInputWarningPtag {
+    background-color: black;
+    border-radius: 5px;
+    padding: 10px;
+}
