some style changes in output container

--- a/CSS/extras.css
+++ b/CSS/extras.css
@@ -66,3 +66,11 @@ option {
     border-radius: 5px;
     padding: 10px;
 }
+
+.dislikeContainer{
+    margin: .1rem;
+    padding: 10px;
+    cursor: pointer;
+    background-color: rgb(15, 128, 134);
+    text-align: center;
+}
