--- a/CSS/extras.css
+++ b/CSS/extras.css
@@ -71,6 +71,7 @@ option {
     margin: .1rem;
     padding: 10px;
     cursor: pointer;
+    color: black;
     background-color: rgb(15, 128, 134);
     text-align: center;
 }
