--- a/CSS/extras.css
+++ b/CSS/extras.css
@@ -1,12 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 body {
-    font-family: "Roboto Slab", serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 p {
     margin: 5px;
-    font-family: "Roboto Slab", serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 h3 {
