--- a/CSS/inputs.css
+++ b/CSS/inputs.css
@@ -1,5 +1,5 @@
 input {
-    font-family: "Roboto Slab", serif;
+    font-family: 'Titillium Web', sans-serif;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid grey;
