--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing:border-box;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Titillium Web', sans-serif;
 }
         nav {
             display: flex;
