--- a/CSS/calcMobileDesign.css
+++ b/CSS/calcMobileDesign.css
@@ -4,10 +4,11 @@
         justify-content: center;
         align-items: center;
         width: fit-content;
-        padding: 30px;
+        padding: 30px 80px;
         background-color: rgb(33, 39, 44);
         color: white;
-        margin: 5px;
+        margin: auto;
+        
         border: none;
     }
     body{
