--- a/CSS/containerMobile.css
+++ b/CSS/containerMobile.css
@@ -7,6 +7,7 @@
         background-color: rgb(35, 27, 27);
         background-image: none;
         height: 80vh;
+        padding: 3px;
         width: 95%;
     }
 }
