--- a/CSS/containerMobile.css
+++ b/CSS/containerMobile.css
@@ -4,10 +4,13 @@
     }
     #container{
         margin-top: 3px;
-        background-color: rgb(35, 27, 27);
+        background-color: rgb(0, 0, 0);
         background-image: none;
-        height: 80vh;
-        padding: 3px;
+        height: auto;
+        padding: 10vh 0;
         width: 95%;
+    }
+    input{
+        margin: 16px 0;
     }
 }
