--- a/CSS/containerMobile.css
+++ b/CSS/containerMobile.css
@@ -3,7 +3,7 @@
         background-image: none;
     }
     #container{
-        margin-top: 3px;
+        margin-top: 4rem;
         background-color: rgb(0, 0, 0);
         background-image: none;
         height: auto;
