--- a/CSS/extras.css
+++ b/CSS/extras.css
@@ -87,3 +87,10 @@ option {
         font-size: 25px;
     }
 }
+
+
+@media only screen and (min-width: 1001px) and (max-width: 1075px) {
+    nav .logo,input{
+        font-size: 20px;
+    }
+}
