--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -114,3 +114,15 @@
                 color: cyan;
             }
         }
+
+
+
+
+@media only screen and (min-width: 1001px) and (max-width: 1104px) {
+            nav .logo,li{
+                font-size: 16px;
+            }
+            nav ul li a{
+                font-size: 15px;
+            }
+        }
