--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -6,8 +6,8 @@
     align-items: center;
     width: 100%;
     height: 10vh;
-    background-color: #000000; /* Set the background color of your footer */
-    color: #fff; /* Set the text color of your footer */
+    background-color: #000000;
+    color: #fff; 
     text-align: center;
     padding: 15px;
 }
