--- a/CSS/containerMobile.css
+++ b/CSS/containerMobile.css
@@ -5,7 +5,8 @@
     #container{
         margin-top: 4rem;
         background-color: rgb(0, 0, 0);
-        background-image: none;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
         height: auto;
         padding: 10vh 0;
         width: 95%;
