--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,11 +4,18 @@
     margin: 0;
     box-sizing:border-box;
 }
-input{
+input,#operator{
     margin: 10px;
     border: 2px solid black;
     padding: 6px;
     border-radius: 3px;
+}
+#operator{
+  margin-left: 17px;
+  border: 1px solid gray;
+  background-color: black;
+  color: white;
+  padding: 5px 40px;
 }
 nav{
     display: flex;
@@ -117,6 +124,7 @@ form button{
 } */
 .selectCalcH2{
   margin-bottom: 20px;
+  text-align: center;
 }
 form button:hover{
     background-color: brown;
@@ -165,11 +173,4 @@ button:active{
     border-radius: 3px;
     flex-direction: column;
     justify-content: center;
-}
-select{
-  margin-bottom: 10px;
-  padding: 0 20px 0 20px;
-}
-option{
-  border: 1px solid gray;
 }
