--- a/CSS/index.css
+++ b/CSS/index.css
@@ -170,11 +170,17 @@ button:active{
   color: white;
     border: 1px solid rgb(66, 82, 66);
     display: flex;
-    height: 400px;
+    height: 70vh;
     margin: auto;
-    width: 500px;
+    width: 50%;
     align-items: center;
     border-radius: 3px;
     flex-direction: column;
     justify-content: center;
+}
+@media (max-width:920px) {
+  #divcalculator{
+    height: 400px;
+    width: 100%;
+}
 }
