--- a/CSS/containerMobile.css
+++ b/CSS/containerMobile.css
@@ -3,18 +3,21 @@
         background-image: none;
     }
     #container{
-        margin-top: 3rem;
         background-color: rgb(0, 0, 0);
         background-size: 100% 100%;
         background-repeat: no-repeat;
-        height: auto;
         padding:17vh 0 16vh 0;
         width: 95%;
-        max-height: 65vh;
+        margin-top: 2px 0 7px 0;
+        
     }
     input{
         margin: 16px 0;
     }
+    #output{
+    font-size: medium;
+}
+    
 }
 @media only screen and (min-width: 682px) and (max-width: 999px) {
     #container{
