--- a/CSS/calcv3.css
+++ b/CSS/calcv3.css
@@ -22,6 +22,7 @@
     color: rgb(0, 0, 0);
     border-radius: 4px;
     width: 4rem;
+    user-select: none;
     cursor: pointer;
 }
 .column-1-4,.column-1-5{
