--- a/CSS/calcv3.css
+++ b/CSS/calcv3.css
@@ -56,7 +56,7 @@ h3{
 
     .calcBody{
         background-color: rgb(33, 39, 44);
-        margin: 0;
+        margin: 3px;
     }
     .MainCalcBody{
         padding-bottom: 40px;
