--- a/CSS/containerMobile.css
+++ b/CSS/containerMobile.css
@@ -6,9 +6,13 @@
         background-color: rgb(0, 0, 0);
         background-size: 100% 100%;
         background-repeat: no-repeat;
-        padding:17vh 0 16vh 0;
+        padding:10vh 0 16vh 0;
         width: 95%;
-        margin-top: 2px 0 7px 0;
+        margin-bottom: 10vh;
+        min-height: 60vh;
+        height: 76vh;
+        max-height: 80vh;
+        /* height: fit-content; */
         
     }
     input{
@@ -16,7 +20,16 @@
     }
     #output{
     font-size: medium;
-}
+    }
+    table tr td,table tr th{
+        padding: 7px;
+    }
+    table tr{
+        
+    }
+    table{
+        padding: 10px;
+    }
     
 }
 @media only screen and (min-width: 682px) and (max-width: 999px) {
