--- a/CSS/weatherPage.css
+++ b/CSS/weatherPage.css
@@ -3,8 +3,6 @@
     justify-content: center;
     width: 100%;
     padding: 10px;
-    /* border: 1px solid black; */
-    /* background-color: black; */
     color: black;
     border-radius: 5px;
 }
@@ -34,4 +32,14 @@ h3{
 }
 .loadingGif{
     background-color: black;
+}
+
+@media (max-width: 1000px) {
+    .container,.containerWeatherPage{
+        height: 100vh;
+        width: 100%;
+    }
+    .resultDisplayArea{
+        padding: 20px;
+    }
 }
