--- a/CSS/container.css
+++ b/CSS/container.css
@@ -32,4 +32,7 @@ th,td{
         padding: 20px;
         height: 65vh;
     }
+    .containerWeatherPageBody #loadingGif .spinner-border {
+        border-top-color: black;
+    }
 }
