--- a/CSS/universalFontFamily.css
+++ b/CSS/universalFontFamily.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 *{
     font-family: 'Signika Negative', sans-serif;
 }
