--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,6 +1,5 @@
 .footer {
     display: flex;
-    position: inherit;
     bottom: 0;
     justify-content: center;
     align-items: center;
@@ -11,4 +10,7 @@
     text-align: center;
     margin-top: 10vh;
     padding: 15px;
+}
+.footer.Index{
+    margin-top: 15vh;
 }
