--- a/CSS/404.css
+++ b/CSS/404.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
 *{
     margin: 0;
+    box-sizing:border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 
 
-
+.navbarMainElem nav{
+    display: flex;
+    width: 85%;
+    justify-content: right;
+}
 
 .navbarMainElem{
     height: 10vh;
@@ -17,12 +22,13 @@
     align-items: center;
 }
 .navbarMainElem nav ul{
+    justify-content: space-between;
     display: flex;
 }
 
 .navbarMainElem nav ul li{
     list-style: none;
-    padding: 10px;
+    margin-left: 10px;
 }
 .navbarMainElem nav ul li a{
     text-decoration: none;
@@ -43,9 +49,9 @@
 
 
 .logoNav{
-    font-size: clamp(2vh,3vw,4vh);
+    font-size: clamp(3vh,3vw,4vh);
+    font-weight: 600;
 }
-
 
 .container{
     display: flex;
@@ -70,9 +76,12 @@ img.svgAbstract{
     height: 15rem;
     filter: blur(0px);
 }
-
-@media (max-width:1000px){
-    .subB{
+ @media (max-width:1110px){
+    .navbarMainElem nav{
         display: none;
     }
-}
+    .logoNav {
+        width: 100%;
+        text-align: center;
+    }
+ }
