--- a/CSS/todo.css
+++ b/CSS/todo.css
@@ -20,20 +20,18 @@
     li{
         list-style: none;
     }
-    #listArea {
-        scroll-behavior: smooth;
-        display: flex;
-        flex-direction: column;
-    }
-    #listArea div{
+    #listArea .liDiv{
         display: flex;
         margin: 10px;
         align-items: center;
         padding: 10px;
+        width: 100%;
         font-size: medium;
+        justify-content: space-between;
         border: 1px solid gray;
     }
-    #listArea div button{
+
+    #listArea .liDiv button{
         border: 1px solid gray;
         padding:5px 20px;
         cursor: pointer;
@@ -51,31 +49,27 @@
     .headTitle{
         font-size: xx-large;
     }
-    input{
-        padding: 10px;
-        width: 30vh;
-    }
-    .btnDesign{
-    padding: 10px 16px;
-    margin: 5px;
-    box-shadow: 0 0 10px rgb(46, 46, 29);
-    border: 1px solid rgb(27, 96, 56);
-    border-radius: 5px;
-    color: white;
-    background-color: rgb(22, 16, 16);
+
+.formMain{
+    display: flex;
+    scroll-behavior: smooth;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+}
+
+
+ #btnAdd{
+    padding: 10px 20px;
     cursor: pointer;
-    transition: all ease-in-out .2s;
+    margin: 10px;
 }
-.btnDesign:hover{
-    border: 1px solid rgb(16, 15, 15);
-    background-color: rgb(2, 39, 9);
-    color: rgb(255, 255, 255);
+.formMain input{
+    padding: 5px;
+    width: 50vh;
+    height: 30px; /* Set the desired height here */
 }
-.btnDesign:active{
-    background-color: white;
-    color: rgb(3, 3, 3);
-    border-width: .1rem;
-}
+
 .btnDesignClear{
     border: 1px solid gray;
     padding: 10px;
@@ -86,4 +80,16 @@
 }
 .btnDesignClear:hover{
     background-color: rgb(199, 175, 42);
+}
+@media (max-width:1000px){
+    .formMain{
+        margin: 10px;
+    }
+    .formMain input{
+        padding: 1vw;
+    }
+    #btnAdd{
+        padding: 10px;
+        margin: 5px;
+    }
 }
