--- a/CSS/todo.css
+++ b/CSS/todo.css
@@ -47,7 +47,7 @@
         color: white;
     }
     #listArea {
-        width: 100%;
+        /* width: 100%; */
     }
     .headTitle{
         font-size: xx-large;
