btn design and font changed

--- a/CSS/todo.css
+++ b/CSS/todo.css
@@ -1,8 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+*{
+    font-family: 'Signika Negative', sans-serif;
+}
+:root{
+    --defFont: 'Signika Negative', sans-serif;
+}
+
+
 body,.headTitle{
     margin: 0;
     scroll-behavior: smooth;
-    font-family: 'Roboto', sans-serif;
     background-color: rgb(37, 37, 33);
 }
 .headTitle{
@@ -45,13 +56,15 @@ body,.headTitle{
     padding: 15px 25px;
     background-color: rgb(250, 247, 90);
     border-radius: 2px;
+    
     border: 1px solid rgb(128, 128, 128);
     transition: .3s all ease-in-out;
     cursor: pointer;
 }
 .MainAll .formMain #btnAdd:hover,.liDiv button:hover,.btnDesignClear:hover{
     background-color: rgb(255, 238, 129);
-    box-shadow: 3px 3px 2px rgb(173, 157, 14);
+    border-radius: 4px;
+    box-shadow: 3px 3px 0px rgb(255, 231, 15);
 }
 
 li{
@@ -75,11 +88,6 @@ li{
     justify-content: space-between;
     padding: 10px;
 }
-
-:root{
-    --defFont: Arial, Helvetica, sans-serif;
-}
-
 #navbar nav .logo{
     font-family: var(--defFont);
     font-size: clamp(1vh,2rem,3rem);
