--- a/CSS/universalFontFamily.css
+++ b/CSS/universalFontFamily.css
@@ -3,11 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 *{
-    font-family: 'Signika Negative', sans-serif;
+    font-family: "Lato", sans-serif;
 }
 p{
-    font-family: 'Signika Negative', sans-serif;
+    font-family: "Lato", sans-serif;
 }
 /* YOUTUBE DISLIKE RETURN GUIDE AREA */
 
