--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,9 +1,19 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
+
 nav {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: subpixel-antialiased;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
     display: flex;
     height: 80px;
     width: 100%;
@@ -17,7 +27,7 @@ nav {
 nav .logo {
     color: #fff;
     font-size: 2rem;
-    font-weight: 600;    
+    font-weight: 600;
 }
 
 nav ul {
@@ -59,56 +69,56 @@ input[type="checkbox"] {
 
 @media (max-width: 1042px) {
     nav {
-padding: 0 40px 0 50px;
+        padding: 0 40px 0 50px;
     }
 }
 
 @media (max-width: 1042px) {
     nav .menu-btn i {
-display: block;
+        display: block;
     }
 
     #click:checked~.menu-btn i:before {
-content: "\f00d";
+        content: "\f00d";
     }
 
     nav ul {
-position: fixed;
-top: 80px;
-left: -100%;
-background: #111;
-height: 100vh;
-width: 100%;
-text-align: center;
-display: block;
-transition: all 0.3s ease;
+        position: fixed;
+        top: 80px;
+        left: -100%;
+        background: #111;
+        height: 100vh;
+        width: 100%;
+        text-align: center;
+        display: block;
+        transition: all 0.3s ease;
     }
 
     #click:checked~ul {
-left: 0;
+        left: 0;
     }
 
     nav ul li {
-width: 100%;
-margin: 40px 0;
+        width: 100%;
+        margin: 40px 0;
     }
 
     nav ul li a {
-width: 100%;
-margin-left: -100%;
-display: block;
-font-size: 20px;
-transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        width: 100%;
+        margin-left: -100%;
+        display: block;
+        font-size: 20px;
+        transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
     #click:checked~ul li a {
-margin-left: 0px;
+        margin-left: 0px;
     }
 
     nav ul li a.active,
     nav ul li a:hover {
-background: none;
-color: cyan;
+        background: none;
+        color: cyan;
     }
 }
 
@@ -116,11 +126,13 @@ color: cyan;
 
 
 @media only screen and (min-width: 1042px) and (max-width: 1268px) {
-    nav .logo,li{
-font-size: 16px;
+
+    nav .logo,
+    li {
+        font-size: 16px;
     }
-    nav ul li a{
-font-size: 15px;
+
+    nav ul li a {
+        font-size: 15px;
     }
 }
-
