--- a/TODOLIST/CSS/sidebar.css
+++ b/TODOLIST/CSS/sidebar.css
@@ -35,12 +35,28 @@
     display: flex;
     width: 9vh;
 }
+
 .categoryListing{
+    width: clamp(10rem,10rem,12rem);
+    margin: 4px;
+    transition: .1s all ease-in-out;
+    padding: 10px;
+    cursor: pointer;
+    font-weight: 500;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid #3a3b3c;
+    user-select: none;
+}
+.categoryListing:hover{
+    border-color:rgb(133, 131, 131);
+    background-color: #004a77;
 }
 #categoryListingSideBarText{
+    text-align: center;
+    max-width: 95px;
+    text-overflow: hidden;
     display: flex;
     overflow: hidden;
     flex-wrap: wrap;
@@ -54,4 +70,9 @@
     display: flex;
     justify-content: center;
     align-items: end;
+}
+
+.activeCategoryInSideBar{
+    color: #a9d3ee;
+    background-color: #004a77;
 }
